[gd_scene load_steps=16 format=2]

[ext_resource path="res://Art/menu_button_unpressed.png" type="Texture" id=1]
[ext_resource path="res://Art/menu_button_highlight.png" type="Texture" id=2]
[ext_resource path="res://Art/menu_button_pressed.png" type="Texture" id=3]
[ext_resource path="res://Art/menu_center.png" type="Texture" id=4]
[ext_resource path="res://bitpap/BitPap.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Art/four-colors.png" type="Texture" id=6]
[ext_resource path="res://Art/thermo.png" type="Texture" id=7]
[ext_resource path="res://Art/Wildling_head_only-4k.png" type="Texture" id=8]
[ext_resource path="res://Art/53-Theme-Ass-Required.png" type="Texture" id=9]
[ext_resource path="res://Menu.gd" type="Script" id=10]

[sub_resource type="DynamicFont" id=1]
size = 100
outline_size = 5
outline_color = Color( 0.258824, 0.298039, 0.431373, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 75
outline_size = 4
outline_color = Color( 0.145098, 0.188235, 0.34902, 1 )
font_data = ExtResource( 5 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Assembly:rect_rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 27.9106 ]
}

[sub_resource type="Animation" id=3]
resource_name = "Start"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Assembly:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.001, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -25, -212 ), Vector2( -25, -212 ), Vector2( -25, -212 ), Vector2( -25, 923 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Assembly:rect_rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 27.9106, -20.4904, -110.949 ]
}

[sub_resource type="DynamicFont" id=5]
size = 40
font_data = ExtResource( 5 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )

[node name="BG_Color" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -1.0
color = Color( 0.145098, 0.188235, 0.34902, 1 )

[node name="WildCard2" type="TextureRect" parent="."]
margin_left = 139.0
margin_top = 746.0
margin_right = 1019.0
margin_bottom = 1946.0
rect_rotation = -17.7428
rect_scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 6 )

[node name="WildCard" type="TextureRect" parent="."]
margin_left = 1510.0
margin_top = 657.0
margin_right = 2390.0
margin_bottom = 1857.0
rect_rotation = 20.0333
rect_scale = Vector2( 0.35, 0.35 )
texture = ExtResource( 7 )

[node name="Menu_Center" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -98.0
margin_top = -82.0
margin_right = 98.0
margin_bottom = 82.0
rect_scale = Vector2( 6, 6 )
rect_pivot_offset = Vector2( 96.3333, 82.8056 )
texture = ExtResource( 4 )

[node name="Start_Button" type="TextureButton" parent="."]
margin_left = 680.0
margin_top = 218.0
margin_right = 776.0
margin_bottom = 240.0
rect_scale = Vector2( 6, 6 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 2 )

[node name="Options_Button" type="TextureButton" parent="."]
margin_left = 680.0
margin_top = 470.0
margin_right = 776.0
margin_bottom = 492.0
rect_scale = Vector2( 6, 6 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 2 )

[node name="Quit_Button" type="TextureButton" parent="."]
margin_left = 680.0
margin_top = 722.0
margin_right = 776.0
margin_bottom = 744.0
rect_scale = Vector2( 6, 6 )
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 2 )

[node name="Title_Text" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -92.0
margin_top = -298.0
margin_right = 110.0
margin_bottom = -198.0
rect_pivot_offset = Vector2( 46.6667, 9.66666 )
custom_colors/font_color = Color( 0.964706, 0.792157, 0.623529, 1 )
custom_fonts/font = SubResource( 1 )
text = "start"
align = 1
valign = 1
uppercase = true

[node name="Label2" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -45.0
margin_right = 152.0
margin_bottom = 55.0
rect_pivot_offset = Vector2( 46.6667, 9.66666 )
custom_colors/font_color = Color( 0.964706, 0.792157, 0.623529, 1 )
custom_fonts/font = SubResource( 1 )
text = "options"
align = 1
valign = 1
uppercase = true

[node name="Label3" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -71.0
margin_top = 207.0
margin_right = 80.0
margin_bottom = 307.0
rect_pivot_offset = Vector2( 46.6667, 9.66666 )
custom_colors/font_color = Color( 0.964706, 0.792157, 0.623529, 1 )
custom_fonts/font = SubResource( 1 )
text = "quit"
align = 1
valign = 1
uppercase = true

[node name="Label4" type="Label" parent="."]
margin_left = 733.0
margin_top = 893.0
margin_right = 1224.0
margin_bottom = 969.0
custom_fonts/font = SubResource( 2 )
text = "A Game By: YesTea"

[node name="GodotLogo" type="TextureRect" parent="."]
visible = false
margin_left = -126.0
margin_top = 913.0
margin_right = 3874.0
margin_bottom = 3163.0
rect_scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 8 )

[node name="Assembly" type="TextureRect" parent="."]
margin_left = -25.0
margin_top = -212.0
margin_right = 2675.0
margin_bottom = 558.002
rect_rotation = 27.9106
rect_scale = Vector2( 0.18, 0.18 )
rect_pivot_offset = Vector2( 1309.14, 386.384 )
texture = ExtResource( 9 )

[node name="Start_Anim" type="AnimationPlayer" parent="."]
anims/RESET = SubResource( 4 )
anims/Start = SubResource( 3 )

[node name="credit" type="Button" parent="."]
visible = false
margin_left = 649.0
margin_top = 1016.0
margin_right = 804.0
margin_bottom = 1073.0
custom_fonts/font = SubResource( 5 )
text = "Credits"

[node name="credit2" type="Button" parent="."]
visible = false
margin_left = 1131.0
margin_top = 1016.0
margin_right = 1286.0
margin_bottom = 1073.0
custom_fonts/font = SubResource( 5 )
text = "Bugs"

[node name="credit3" type="Button" parent="."]
margin_left = 1194.0
margin_top = 1016.0
margin_right = 1349.0
margin_bottom = 1073.0
custom_fonts/font = SubResource( 5 )
text = "Controls"

[connection signal="mouse_entered" from="Start_Button" to="." method="_on_Start_Button_mouse_entered"]
[connection signal="pressed" from="Start_Button" to="." method="_on_Start_Button_pressed"]
[connection signal="mouse_entered" from="Options_Button" to="." method="_on_Options_Button_mouse_entered"]
[connection signal="pressed" from="Options_Button" to="." method="_on_Options_Button_pressed"]
[connection signal="mouse_entered" from="Quit_Button" to="." method="_on_Quit_Button_mouse_entered"]
[connection signal="pressed" from="Quit_Button" to="." method="_on_Quit_Button_pressed"]
[connection signal="animation_finished" from="Start_Anim" to="." method="_on_Start_Anim_animation_finished"]
[connection signal="mouse_entered" from="credit" to="." method="_on_credit_mouse_entered"]
[connection signal="pressed" from="credit" to="." method="_on_credit_pressed"]
[connection signal="mouse_entered" from="credit2" to="." method="_on_credit2_mouse_entered"]
[connection signal="pressed" from="credit2" to="." method="_on_credit2_pressed"]
[connection signal="mouse_entered" from="credit3" to="." method="_on_credit2_mouse_entered"]
[connection signal="pressed" from="credit3" to="." method="_on_credit3_pressed"]
